--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
 </head>
 
 <body>
+    <h1>Find your favorite Pokemon!</h1>
     <form action="">
-        <h1>Find your Pokemon!</h1>
-        <label for="searchPokemon">Pokemon Name</label>
+        <label for="searchPokemon">Type Any Pokemon's Name <br>or A Random Number (1 ~ 807)</label>
         <input type="text" id="searchPokemon" name="pokemon_name">
         <button type="submit">search</button>
     </form>
-    <article id="display">
-        <!-- <h2>Pikachu</h2>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" alt="">
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/25.png" alt=""> -->
-    </article>
+    <section></section>
     <script src="script.js"></script>
 </body>
 
